fix bug with completed requests